Fix collapsable navigation

--- a/less/_common.less
+++ b/less/_common.less
@@ -3,6 +3,7 @@
 .bold{font-weight: bold;}
 .thin{font-weight: normal;}
 .text-color{color:@text-color}
+@white: #ffffff;
 
 
 
