--- a/less/_stormbringer.less
+++ b/less/_stormbringer.less
@@ -4,7 +4,6 @@
 @color3: #2F3C5E;
 @color4: #175567;
 @color5: #006F71;
-@white: #ffffff;
 
 
 @body-bg:        #fff;
